src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 5% 100%;
    --foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 47.4% 11.2%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 47.4% 11.2%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 100% 50%;
    --destructive-foreground: 210 40% 98%;

    --ring: 215 20.2% 65.1%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 0 0% 8%;
    --foreground: 213 3% 91%;

    --muted: 223 5% 20%;
    --muted-foreground: 215.4 1.6% 56.9%;

    --accent: 216 5% 17%;
    --accent-foreground: 210 8% 98%;

    --popover: 224 5% 8%;
    --popover-foreground: 215 2.2% 65.1%;

    --border: 216 3% 17%;
    --input: 216 3% 17%;

    --card: 224 7% 4%;
    --card-foreground: 213 3% 91%;

    --primary: 210 4% 98%;
    --primary-foreground: 222.2 4.4% 1.2%;

    --secondary: 222.2 4.4% 11.2%;
    --secondary-foreground: 210 4% 98%;

    --destructive: 0 6% 31%;
    --destructive-foreground: 210 4% 98%;

    --ring: 216 5% 30%;

    --radius: 0.5rem;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    font-feature-settings: "rlig" 1, "calt" 1;
  }
}

.dashed-grid-paper {
  /* options */
  --grid-size: 30px;
  --grid-strength: 1px;
  --grid-dash: 5px;
  --grid-gap: 10px;
  --grid-color: rgb(66 66 68);
  --paper-color: rgb(24 24 27);

  background-color: var(--paper-color);
  background-size: var(--grid-gap) var(--grid-gap), var(--grid-size) var(--grid-size);
  background-image: linear-gradient(
      to bottom,
      transparent var(--grid-dash),
      var(--paper-color) var(--grid-dash)
    ),
    linear-gradient(
      to right,
      var(--grid-color) var(--grid-strength),
      transparent var(--grid-strength)
    ),
    linear-gradient(
      to right,
      transparent var(--grid-dash),
      var(--paper-color) var(--grid-dash)
    ),
    linear-gradient(
      to bottom,
      var(--grid-color) var(--grid-strength),
      transparent var(--grid-strength)
    );
}

